# statica

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: test_iocs.txt
src/statica/: cli.py  pipeline.py  report.py
src/statica/extractors/: hash_extractor.py  ioc_extractor.py  string_extractor.py
src/statica/formatters/: json_formatter.py
tests/: test_hash_extractor.py  test_ioc_extractor.py  test_string_extractor.py
