[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "statica"
version = "1.0.0"
description = "Statica - Format-agnostic static analysis pipeline"
authors = [
    { name = "R. Santos" }
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
statica = "statica.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]